server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__call_is_not_a_definition.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(def pi 3)\n(print 1)"
---
----- SOURCE CODE
(def pi 3)
(print 1)

----- DEFINITIONS
def pi
