server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__definition_in_a_comment_form.snap
---
source: server/src/analysis/definitions/tests.rs
expression: (comment (var n 0))
---
----- SOURCE CODE
(comment (var n 0))

----- DEFINITIONS
var n
