server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__definition_in_a_function_body.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(def pi 3)\n(defn- area [r] (def sq (* r r)) (* pi sq))"
---
----- SOURCE CODE
(def pi 3)
(defn- area [r] (def sq (* r r)) (* pi sq))

----- DEFINITIONS
def pi
defn- area [r] (private)
  def sq
