server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__destructuring_definition.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(def [a b] [1 2])"
---
----- SOURCE CODE
(def [a b] [1 2])

----- DEFINITIONS
def a
def b
