server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__long_string_docstring_is_dedented.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(defmacro m\n  ``Line one\n  line two``\n  [x] x)"
---
----- SOURCE CODE
(defmacro m
  ``Line one
  line two``
  [x] x)

----- DEFINITIONS
defmacro m [x]
  doc: "Line one\nline two"
