server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__private_metadata.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(def pi :private \"Pi-ish.\" 3)"
---
----- SOURCE CODE
(def pi :private "Pi-ish." 3)

----- DEFINITIONS
def pi (private)
  doc: "Pi-ish."
