server/src/analysis/definitions/snapshots/janet_zed_server__analysis__definitions__tests__string_value_is_not_a_docstring.snap
---
source: server/src/analysis/definitions/tests.rs
expression: "(def x \"not a doc\")"
---
----- SOURCE CODE
(def x "not a doc")

----- DEFINITIONS
def x
